--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="/pages/home/index.css" />
     <link rel="stylesheet" href="../../css/header-footer.css" />
     <title>Forza Calçados</title>
     <link rel="shortcut icon" type="imagex/png" href="../../imagens/logo.png">  
